@startuml Attributes

!include styledefs.iuml

title Attributes System Class Diagram\n

class Player {
    + $get $type("HealthAttribute")  Health
    + $get $type("StaminaAttribute") Stamina
    + $get $type("PoiseAttribute")   Poise
    + $get $type("StatusAttribute")  Status
    ..
    + $get $type("AttributesContainer") Attributes
}
Player *-- AttributesContainer

interface IAttribute < T : ValueType > {
    + $getset $type("T") Value
    + $type("event") OnAttributeChanged(oldValue,newValue)
}

class HealthAttribute<float> implements IAttribute
class StaminaAttribute<float> implements IAttribute
class PoiseAttribute<float> implements IAttribute

enum CharacterStatus {
    0 = None
    1 = Staggered
    2 = IFrames
    3 = Unstoppable
}
class StatusAttribute<CharacterStatus> implements IAttribute
StatusAttribute o-- CharacterStatus

class AttributesContainer
{
    + $get $type("IAttribute[]") Attributes
    + $type("T") GetAttribute<T>()
}

note left of AttributesContainer::GetAttribute
T is IAttribute
end note

AttributesContainer "1" o-- "1..*" IAttribute

class UIHealthBar $stereo("MonoBehaviour") {
    - $type("void") OnHealthChanged(old, new)
}

PoiseAttribute --> PlayerBody : Change\nSignals

class PlayerBody {
    - $type("void") OnPoiseChanged(old,new)
    - $type("void") PerformStagger()
}
note left of PlayerBody : Perform stagger\nanimation when\nPoise value is\nchanged to "0".

HealthAttribute --> UIHealthBar : Change\nSignals

@enduml